kube/dbserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db-server
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8006
      targetPort: 8002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-server
  template:
    metadata:
      labels:
        app: db-server
    spec:
      containers:
        - name: db-server
          image: suksham/probo_db_server:latest
