kube/engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine
          image: suksham/probo_engine:latest
---
apiVersion: v1
kind: Service
metadata:
  name: engine
spec:
  selector:
    app: engine
  type: ClusterIP
  ports:
    - port: 8005
      targetPort: 8081
