kube/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: node-server
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
        - name: server
          image: suksham/probo_server:latest
          ports:
            - containerPort: 3000
