kube/ws.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-service
spec:
  selector:
    app: ws
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws
  template:
    metadata:
      labels:
        app: ws
    spec:
      containers:
        - name: go-ws
          image: suksham/probo_ws_server:latest
