kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-apps-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - probo.sajilodev.com
      secretName: quickstart-example-tls
  rules:
    - host: probo.sajilodev.com
      http:
        paths:
          - path: /server(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-service
                port:
                  number: 3000
          - path: /socket(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ws-service
                port:
                  number: 8080
